Revise README for player manual and flight details
Updated the README to provide a player manual for the Aeronix flight simulator, including sections on controls, basic concepts, and flight manual.