@@ -1,129 +1,135 @@
-# ✈ AERONIX Flight Simulator
-**v0.1.0 Alpha — JDK 21 — Windows Desktop — Cirrus SR22**
+#  Flight Simulator — Manuale del Giocatore
+
+## Indice
+
+1. [Introduzione](#1-introduzione)
+2. [Concetti di base](#2-concetti-di-base)
+3. [Controlli](#3-controlli)
+4. [Pannello strumenti](#4-pannello-strumenti)
+5. [Manuale di volo](#5-manuale-di-volo)
+6. [Consigli e buone pratiche](#6-consigli-e-buone-pratiche)
+7. [Menu e impostazioni](#7-menu-e-impostazioni)
+8. [Glossario](#8-glossario)
 
 ---
 
-## Architettura MVC
+## 1. Introduzione
 
-```
-com.aeronix/
-├── Main.java                        ← Entry point
-│
-├── model/                           ← MODEL (dati puri, nessuna UI)
-│   ├── AircraftModel.java           ← Stato completo SR22 + getter/setter
-│   ├── Airport.java                 ← Record aeroporto (ICAO, coord, pista...)
-│   ├── AirportDatabase.java         ← ~55 aeroporti italiani
-│   ├── AtcScript.java               ← Dialogo completo Phoenix Radio
-│   └── Settings.java                ← Persistenza via Java Preferences API
-│
-├── controller/                      ← CONTROLLER (logica di gioco)
-│   ├── FlightController.java        ← Physics tick 60Hz, ATC trigger, listeners
-│   └── InputController.java         ← Tutti i tasti + mouse → FlightController
-│
-├── view/                            ← VIEW (solo rendering, nessuna logica)
-│   ├── SplashView.java              ← Schermata caricamento (stile X-Plane 12)
-│   ├── AirportSelectionView.java    ← Selezione aeroporto italiano
-│   ├── FictionalLoadingView.java    ← Caricamento fittizio + globo wireframe
-│   ├── FlightView.java              ← Volo: scena + HUD + motore + ATC radio
-│   └── OptionsView.java             ← Opzioni: grafica, audio, tasti, sim
-│
-└── audio/
-    └── AudioManager.java            ← Engine loop, vento, click ATC, avvisi
-```
+Benvenuto in **Aeronix**! Questo gioco ti mette ai comandi di un aereo monomotore in un ambiente tridimensionale. Sperimenterai una fisica di volo realistica — portanza, resistenza, gravità e spinta — mentre impari a gestire i comandi dell'aereo e a leggere gli strumenti di bordo.
 
----
+Questo manuale copre tutto ciò di cui hai bisogno: i controlli di volo, come interpretare i quadranti, e le tecniche per decollare, volare in crociera e atterrare in sicurezza.
 
-## Flow delle schermate
 
-```
-Main
- └→ SplashView          (loading simulato ~8 sec)
-      └→ AirportSelectionView  (scegli aeroporto italiano)
-           └→ FictionalLoadingView  (caricamento fittizio con globo 3D)
-                └→ FlightView       (simulazione di volo)
-```
+## 2. Concetti di base
+
+### 2.1 I tre assi di rotazione
+
+Il movimento di un aereo si descrive attraverso tre rotazioni principali:
+
+| Asse | Nome | Descrizione | Superficie di controllo |
+|------|------|-------------|------------------------|
+| X | **Pitch** (Beccheggio) | Muso su o giù, come annuire | Elevatori |
+| Y | **Yaw** (Imbardata) | Muso a sinistra o destra, come scuotere la testa | Timone di direzione |
+| Z | **Roll** (Rollio) | Inclinazione laterale delle ali | Alettoni |
+
+### 2.2 Superfici di controllo
+
+- **Alettoni** :sulle ali; controllano il rollio.
+- **Elevatori** :sullo stabilizzatore orizzontale (piccole ali posteriori); controllano il beccheggio.
+- **Timone di direzione** :sullo stabilizzatore verticale; controlla l'imbardata.
+- **Flap** :aumentano la portanza a basse velocità, utili in decollo e atterraggio.
+
+### 2.3 Le quattro forze del volo
+
+| Forza | Descrizione |
+|-------|-------------|
+| **Spinta** | Generata dal motore tramite l'acceleratore. Supera la resistenza. |
+| **Resistenza** | Si oppone al moto. Cresce con la velocità e con l'aria densa a bassa quota. |
+| **Portanza** | Forza verticale generata dalle ali. Aumenta col quadrato della velocità. |
+| **Gravità** | Forza costante verso il basso, contrastata dalla portanza. |
 
 ---
 
-## Dialogo ATC — Phoenix Radio (automatico)
+## 3. Controlli
 
-Il sistema ATC si attiva **automaticamente** in base a:
-- **Fase aereo** (`PARKED → TAXIING → LINEUP → TAKEOFF → CLIMB...`)
-- **Quota** (500 ft → call in volo, 1200 ft → richiesta cambio frequenza)
+> Tutti i tasti sono personalizzabili dal menu **Impostazioni → Controlli**.
 
-### Sequenza completa:
-| # | Chi | Messaggio |
-|---|-----|-----------|
-| 1 | I-CDBG (pilota) | Phoenix radio, I-CDBG, Buongiorno |
-| 2 | Phoenix Radio | I-CDBG, Phoenix radio, buongiorno. QNH 1012, avanti |
-| 3 | I-CDBG | SR22, QNH 1012, VFR, senza piano di volo, Phoenix–Phoenix... chiede istruzioni rullaggio |
-| 4 | Phoenix Radio | I-BG, rullare al punto attesa pista 26L via Mike November Oscar... |
-| 5 | I-BG | Readback rullaggio |
-| 6 | I-BG | Al punto attesa pista 26L, pronto alla partenza |
-| 7 | Phoenix Radio | Finale pista libero, allineamento e decollo a discrezione pista 26L |
-| 8 | I-BG | Readback clearance decollo |
-| 9 | Phoenix Radio | I-BG, in volo agli 12' *(attivato a ~500 ft)* |
-| 10 | I-BG | Phoenix radio, pronti per il cambio *(a ~1200 ft)* |
-| 11 | Phoenix Radio | Contattare informazioni sulla 125.243, buona giornata |
+| Azione | Tasto predefinito |
+|--------|------------------|
+| Acceleratore + | `↑` (freccia su) |
+| Acceleratore − | `↓` (freccia giù) |
+| Beccheggio su (pitch up) | `W` |
+| Beccheggio giù (pitch down) | `S` |
+| Rollio sinistra (roll left) | `A` |
+| Rollio destra (roll right) | `D` |
+| Imbardata sinistra (yaw left) | `Q` |
+| Imbardata destra (yaw right) | `E` |
+| Freni (brakes) | `B` |
+| Pausa / Riprendi | `ESC` |
+| Ruota telecamera | Trascina con il mouse |
+| Zoom telecamera | Rotella del mouse |
 
 ---
 
-## Tasti principali
+## 4. Pannello strumenti
 
-| Azione | Tasto |
-|--------|-------|
-| Pitch su/giù | ↑↓ / W S |
-| Rollio dx/sx | ←→ / A D |
-| Ruddder | Q / E |
-| Manetta +/- | Page Up / Page Down |
-| Carrello | G |
-| Flap su/giù | F / Shift+F |
-| Autopilota | Z |
-| Pausa | P / Esc |
-| Vista cabina/esterna | 1 / 2 |
-| Avvia/ferma motore | Ctrl+E |
+Il pannello laterale destro ospita gli strumenti di bordo. Imparare a leggerli è fondamentale per volare con sicurezza.
 
-*(tutti i comandi elencati in OptionsView → tab "Tastiera & Mouse")*
+| Strumento | Descrizione |
+|-----------|-------------|
+| **Bussola / Heading** | Indica la direzione di volo in gradi (0° = Nord). L'ago ruota in base all'imbardata. |
+| **Anemometro** | Velocità dell'aereo in nodi. Decollo: ~60 kn. Crociera: ~110 kn. |
+| **Altimetro** | Altitudine in piedi. Lancetta lunga = centinaia, corta = migliaia. Crociera: ~4.500 ft. |
+| **Indicatore di virata** | Mostra il rollio. Mantieni l'ago alla `L` o `R` per una virata costante. |
+| **Variometro** | Velocità verticale in ft/min. Positivo = salita, negativo = discesa. |
+| **Acceleratore** | Indicatore grafico della spinta (0%–100%) nel pannello laterale. |
 
----
+## 5. Manuale di volo
 
-## Compilazione
+### 5.1 Decollo
 
-**Prerequisiti:** JDK 21, Maven 3.9+
+1. Posizionati sulla pista con spazio sufficiente davanti.
+2. Porta l'acceleratore al massimo (`↑` tenuto premuto).
+3. Lascia accelerare l'aereo — **non toccare il beccheggio ancora**.
+4. A circa **60 nodi**, inclina delicatamente il muso verso l'alto (`S`).
+5. Mantieni il rollio a zero per non toccare un'ala a terra.
+6. Una volta in aria, riduci il beccheggio per salire gradualmente.
 
-```bash
-# Clona / apri il progetto
-cd Aeronix
+> ⚠️ **Attenzione allo stallo:** se inclini troppo il muso a bassa velocità l'aereo stalla. Se la velocità cala rapidamente, abbassa subito il muso per recuperarla.
 
-# Compila e crea fat JAR
-mvn package
 
-# Avvia direttamente
-java --enable-preview -jar target/aeronix-simulator-0.1.0-ALPHA-fat.jar
+## 6. Consigli e buone pratiche
 
-# Oppure usa l'exe Windows generato da launch4j
-target/Aeronix.exe
-```
-
----
-
-## File audio attesi (src/main/resources/audio/)
-```
-engine_loop.wav     ← sintetizzato se assente
-wind_loop.wav       ← sintetizzato se assente
-atc_click.wav       ← sintetizzato se assente
-stall_warning.wav   ← sintetizzato se assente
-gear_down.wav       ← sintetizzato se assente
-```
-*(AudioManager genera tutti i suoni sinteticamente se i file non esistono)*
+- **Comandi morbidi** — l'aereo si stabilizza da solo in crociera; usa solo correzioni piccole e graduali.
+- **Monitora il variometro** — per accorgerti subito di salite o discese involontarie.
+- **Velocità prima di tutto** — se perdi velocità dopo il decollo, abbassa il muso per recuperarla prima di stallare.
+- **Salita** — un angolo di beccheggio eccessivo provoca lo stallo; salire richiede tempo.
+- **Pausa strategica** — premi `ESC` in qualunque momento per fermarti e valutare la situazione.
+- **Reset** — se l'aereo è in una situazione irrecuperabile, usa il pulsante **Reset** nel pannello laterale.
+- **Personalizza i controlli** — trova la configurazione di tasti più comoda per te dal menu Impostazioni.
 
 ---
 
-## To-do / Roadmap
-- [ ] Integrare modello Blender SR22 (OBJ → JOGL/LWJGL)
-- [ ] Renderer OpenGL via JOGL per terreno e cielo
-- [ ] G1000 PFD/MFD completo
-- [ ] Meteo dinamico (vento, turbolenza)
-- [ ] TTS italiano per ATC (Java Speech API / FreeTTS)
-- [ ] Mini-mappa nel cockpit
-- [ ] Salvataggio situazione di volo
+## 7. Menu e impostazioni
+
+### 7.1 Impostazioni
+
+Accessibile dal pulsante **Settings** nel pannello laterale durante il gioco:
+
+| Opzione | Descrizione |
+|---------|-------------|
+| **FOV** | Campo visivo orizzontale della telecamera (30°–120°). Valori bassi = visione più zoomata. |
+| **Sensitivity** | Velocità di rotazione della telecamera con il mouse (1–30). |
+| **Controls** | Apre il pannello per rimappare tutti i tasti di volo. |
+
+### 7.2 Pulsanti del pannello laterale
+
+| Pulsante | Funzione |
+|----------|----------|
+| **Reset** | Riporta l'aereo alla posizione e all'orientamento iniziali con fisica azzerata. |
+| **Settings** | Apre le impostazioni grafiche e di sensibilità. |
+| **Controls** | Apre la rimappatura dei tasti. |
+
+---
+
+*Buon volo!*
